# cmakeExample

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: test.yml
src/: CMakeLists.txt  main.cpp
src/location/: CMakeLists.txt  location.cpp  location.hpp
src/position/: CMakeLists.txt  position.cpp  position.hpp
test/: CMakeLists.txt  main_test.cpp
test/location/: CMakeLists.txt  location_test.cpp
test/position/: CMakeLists.txt  position_test.cpp
